--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- Authentication.\r - Express Middleware.\r - Password Hashing.\r - Sessions\r - Cookies",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon", 
+    "server": "nodemon",
     "start": "node index.js"
   },
   "repository": {
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/sean-birmingham/node-auth1-project#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
